--- a/openshift-tasks/Jenkinsfile
+++ b/openshift-tasks/Jenkinsfile
@@ -132,7 +132,7 @@ podTemplate(
 
           // TBD: Copy image to Nexus container registry
           // OpenShift 3
-          sh "skopeo copy --src-tls-verify=false --dest-tls-verify=false --src-creds openshift:\$(oc whoami -t) --dest-creds admin:redhat docker://docker-registry.default.svc.cluster.local:5000/${devProject}/tasks:${devTag} docker://nexus3-gpte-hw-cicd.apps.na311.openshift.opentlc.com/tasks:${devTag}"
+          sh "skopeo copy --src-tls-verify=false --dest-tls-verify=false --src-creds openshift:\$(oc whoami -t) --dest-creds admin:redhat docker://docker-registry.default.svc.cluster.local:5000/${devProject}/tasks:${devTag} docker://nexus3-gpte-hw-cicd.apps.na311.openshift.opentlc.com:8081/tasks:${devTag}"
 
           // Tag the built image with the production tag.
           openshift.withCluster() {
