switched to local nexus route

--- a/openshift-tasks/Jenkinsfile
+++ b/openshift-tasks/Jenkinsfile
@@ -132,20 +132,20 @@ podTemplate(
 
           // TBD: Copy image to Nexus container registry
           // OpenShift 3
-//          sh "skopeo copy --src-tls-verify=false --dest-tls-verify=false --src-creds openshift:\$(oc whoami -t) --dest-creds admin:redhat docker://docker-registry.default.svc.cluster.local:5000/${devProject}/tasks:${devTag} docker://nexus3-gpte-hw-cicd.apps.na311.openshift.opentlc.com:5000/tasks:${devTag}"
+          sh "skopeo copy --src-tls-verify=false --dest-tls-verify=false --src-creds openshift:\$(oc whoami -t) --dest-creds admin:redhat docker://docker-registry.default.svc.cluster.local:5000/${devProject}/tasks:${devTag} https://nexus3-registry.gpte-hw-cicd.svc.cluster.local:5000/tasks:${devTag}"
 
           // Tag the built image with the production tag.
-//          openshift.withCluster() {
-//            openshift.withProject("${prodProject}") {
-//              openshift.tag("${devProject}/tasks:${devTag}", "${devProject}/tasks:${prodTag}")
-//            }
-//          }
+          openshift.withCluster() {
+            openshift.withProject("${prodProject}") {
+              openshift.tag("${devProject}/tasks:${devTag}", "${devProject}/tasks:${prodTag}")
+            }
+          }
           // Tag the built image with the production tag.
-//          openshift.withCluster() {
-//            openshift.withProject("${prodProject}") {
-//              openshift.tag("${devProject}/tasks:${devTag}", "${devProject}/tasks:${prodTag}")
-//            }
-//          }
+          openshift.withCluster() {
+            openshift.withProject("${prodProject}") {
+              openshift.tag("${devProject}/tasks:${devTag}", "${devProject}/tasks:${prodTag}")
+            }
+         }
       }
 
       // Blue/Green Deployment into Production
