added VERSION env var change

--- a/openshift-tasks/Jenkinsfile
+++ b/openshift-tasks/Jenkinsfile
@@ -103,6 +103,7 @@ podTemplate(
               openshift.withProject("${devProject}") {
                 // For OpenShift 3 use this:
                 openshift.set("image", "dc/tasks", "tasks=docker-registry.default.svc:5000/${devProject}/tasks:${devTag}")
+                sh "oc set env dc/tasks --overwrite VERSION=\"${devTag} (tasks-dev)\""
                 // Update the Config Map which contains the users for the Tasks application
                 // (just in case the properties files changed in the latest commit)
                 openshift.selector('configmap', 'tasks-config').delete()
@@ -174,6 +175,7 @@ podTemplate(
 
                 // OpenShift 3
                 dc.spec.template.spec.containers[0].image="docker-registry.default.svc:5000/${devProject}/tasks:${prodTag}"
+                sh "oc set env dc/tasks --overwrite VERSION=\"${prodTag} (${destApp})\""
 
                 openshift.apply(dc)
 
