--- a/openshift-tasks/Jenkinsfile
+++ b/openshift-tasks/Jenkinsfile
@@ -1,226 +1,155 @@
-#!groovy
-podTemplate(
-  label: "skopeo-pod",
-  cloud: "openshift",
-  inheritFrom: "maven",
-  containers: [
-    containerTemplate(
-      name: "jnlp",
-      image: "docker-registry.default.svc:5000/${GUID}-jenkins/jenkins-agent-appdev",
-      resourceRequestMemory: "1Gi",
-      resourceLimitMemory: "2Gi",
-      resourceRequestCpu: "1",
-      resourceLimitCpu: "2"
-    )
-  ]
-) {
-  node('skopeo-pod') {
-    // Define Maven Command to point to the correct
-    // settings for our Nexus installation
-    def mvnCmd = "mvn -s ../nexus_settings.xml"
+def prefix      = "b397"
+def devProject  = "${prefix}-tasks-dev"
+def prodProject = "${prefix}-tasks-prod"
+def devTag      = "0.0-0"
+def prodTag     = "0.0"
+def destApp     = "tasks-green"
+def activeApp   = ""
+def mvnCmd = "mvn -s openshift-tasks/nexus.xml -f openshift-tasks/pom.xml"
+def version = ""
 
-    // Set Development and Production Project Names
-    def devProject  = "${GUID}-tasks-dev"
-    def prodProject = "${GUID}-tasks-prod"
+pipeline {
+  agent {
+    label 'maven-appdev'
+  }
+stages {
+ stage('Checkout Source') {
+      steps {
+        checkout([$class: 'GitSCM', branches: [[name: '**']], doGenerateSubmoduleConfigurations: false, extensions: [], submoduleCfg: [], userRemoteConfigs: [[url: 'https://github.com/micaelis72/advdevtraining.git']]])    
+        script {
+          def pom = readMavenPom file: 'openshift-tasks/pom.xml'
+          version = pom.version
 
-    // Checkout Source Code.
-    stage('Checkout Source') {
-      checkout scm
-    }
-
-    // Build the Tasks Service
-    dir('openshift-tasks') {
-      // The following variables need to be defined at the top level
-      // and not inside the scope of a stage - otherwise they would not
-      // be accessible from other stages.
-      // Extract version from the pom.xml
-      def version = getVersionFromPom("pom.xml")
-
-      // TBD Set the tag for the development image: version + build number
-      def devTag  = "${version}-" + currentBuild.number
-      // Set the tag for the production image: version
-      def prodTag = "${version}"
-
-      // Using Maven build the war file
-      // Do not run tests in this step
-      stage('Build war') {
+          devTag  = "${version}-" + currentBuild.number
+          prodTag = "${version}"
+        }
+      }    
+    }  
+    stage('Build War File') {
+      steps {
         echo "Building version ${devTag}"
-
-        // TBD: Execute Maven Build
         sh "${mvnCmd} clean package -DskipTests=true"
-      }
-
-      // TBD: The next two stages should run in parallel
-
-      // Using Maven run the unit tests
-      stage('Unit Tests') {
+      }   
+    }
+    stage('Unit Tests') {
+      steps {
         echo "Running Unit Tests"
-
-        // TBD: Execute Unit Tests
         sh "${mvnCmd} test"
+        step([$class: 'JUnitResultArchiver', testResults: '**/target/surefire-reports/TEST-*.xml'])
       }
-
-      // Using Maven to call SonarQube for Code Analysis
-      stage('Code Analysis') {
+    }
+    stage('Code Analysis') {
+      steps {
+        script {
           echo "Running Code Analysis"
-
-          // TBD: Execute Sonarqube Tests
-          sh "${mvnCmd} sonar:sonar -Dsonar.host.url=http://sonarqube-gpte-hw-cicd.apps.na311.openshift.opentlc.com/ -Dsonar.projectName=${GUID}-jenkins-tasks-pipeline -Dsonar.projectVersion=${devTag}"
+          sh "${mvnCmd} sonar:sonar -Dsonar.host.url=http://sonarqube-gpte-hw-cicd.apps.na311.openshift.opentlc.com/ -Dsonar.projectName=${devProject} -Dsonar.projectVersion=${devTag}"
+        }
       }
-
-      // Publish the built war file to Nexus
-      stage('Publish to Nexus') {
-          echo "Publish to Nexus"
-
-          // TBD: Publish to Nexus
-          sh "${mvnCmd} deploy -DskipTests=true -DaltDeploymentRepository=nexus::default::http://nexus3-gpte-hw-cicd.apps.na311.openshift.opentlc.com/repository/releases"
+    }
+    stage('Publish to Nexus') {
+      steps {
+        echo "Publish to Nexus"
+        sh "${mvnCmd} deploy -DskipTests=true -DaltDeploymentRepository=nexus::default::http://nexus3-gpte-hw-cicd.apps.na311.openshift.opentlc.com/repository/releases"      
       }
-
-      // Build the OpenShift Image in OpenShift and tag it.
-      stage('Build and Tag OpenShift Image') {
-          echo "Building OpenShift container image tasks:${devTag}"
-
-          // TBD: Build Image, tag Image
-          script {
-            openshift.withCluster() {
-              openshift.withProject("${devProject}") {
-                openshift.selector("bc", "tasks").startBuild("--from-file=./target/openshift-tasks.war", "--wait=true")
-                openshift.tag("tasks:latest", "tasks:${devTag}")
-              }
+    }
+    stage('Build and Tag OpenShift Image') {
+      steps {
+        echo "Building OpenShift container image tasks:${devTag}"
+        script {
+          openshift.withCluster() {
+            openshift.withProject("${devProject}") {
+              openshift.selector("bc", "tasks").startBuild("--from-file=./target/openshift-tasks.war", "--wait=true")
+              openshift.tag("tasks:latest", "tasks:${devTag}")
             }
           }
+        }
       }
-
-      // Deploy the built image to the Development Environment.
-      stage('Deploy to Dev') {
-          echo "Deploying container image to Development Project"
-
-          script {
-            // TBD: Deploy to development Project
-            //      Set Image, Set VERSION
-            // Update the Image on the Development Deployment Config
-            openshift.withCluster() {
-              openshift.withProject("${devProject}") {
-                // For OpenShift 3 use this:
-                openshift.set("image", "dc/tasks", "tasks=docker-registry.default.svc:5000/${devProject}/tasks:${devTag}")
-                sh "oc set env dc/tasks --overwrite VERSION=tasks-dev -n b397-tasks-dev"
-                // Update the Config Map which contains the users for the Tasks application
-                // (just in case the properties files changed in the latest commit)
-                openshift.selector('configmap', 'tasks-config').delete()
-                def configmap = openshift.create('configmap', 'tasks-config', '--from-file=./configuration/application-users.properties', '--from-file=./configuration/application-roles.properties' )
-
-                // Deploy the development application.
-                openshift.selector("dc", "tasks").rollout().latest();
-
-                // Make sure the application is running and ready before proceeding
-                def dc = openshift.selector("dc", "tasks").object()
-                def dc_version = dc.status.latestVersion
-                def rc = openshift.selector("rc", "tasks-${dc_version}").object()
-
-                echo "Waiting for ReplicationController tasks-${dc_version} to be ready"
-                while (rc.spec.replicas != rc.status.readyReplicas) {
-                  sleep 5
-                  rc = openshift.selector("rc", "tasks-${dc_version}").object()
-                }
-              }
-            }
-          }
-      }
-
-      // Copy Image to Nexus container registry
-      stage('Copy Image to Nexus container registry') {
-          echo "Copy image to Nexus container registry"
-
-          // TBD: Copy image to Nexus container registry
-          // OpenShift 3
+    }
+    stage('Copy Image to Nexus Docker Registry') {
+      steps {
+        echo "Copy image to Nexus Docker Registry"
+        script {
           sh "skopeo copy --src-tls-verify=false --dest-tls-verify=false --src-creds openshift:\$(oc whoami -t) --dest-creds admin:redhat docker://docker-registry.default.svc.cluster.local:5000/${devProject}/tasks:${devTag} docker://nexus3-registry.gpte-hw-cicd.svc.cluster.local:5000/tasks:${devTag}"
-
-          // Tag the built image with the production tag.
           openshift.withCluster() {
             openshift.withProject("${prodProject}") {
               openshift.tag("${devProject}/tasks:${devTag}", "${devProject}/tasks:${prodTag}")
             }
           }
-          // Tag the built image with the production tag.
+        }
+      }
+    }
+    stage('Deploy to Dev') {
+      steps {
+        echo "Deploying container image to Development Project"
+        script {
+          openshift.withCluster() {
+            openshift.withProject("${devProject}") {
+              openshift.set("image", "dc/tasks", "tasks=docker-registry.default.svc:5000/${devProject}/tasks:${devTag}")
+              openshift.selector('configmap', 'tasks-config').delete()
+              def configmap = openshift.create('configmap', 'tasks-config', '--from-file=./openshift-tasks/configuration/application-users.properties', '--from-file=./openshift-tasks/configuration/application-roles.properties' )
+              openshift.selector("dc", "tasks").rollout().latest();
+              def dc = openshift.selector("dc", "tasks").object()
+              def dc_version = dc.status.latestVersion
+              def rc = openshift.selector("rc", "tasks-${dc_version}").object()
+              echo "Waiting for ReplicationController tasks-${dc_version} to be ready"
+              while (rc.spec.replicas != rc.status.readyReplicas) {
+                sleep 5
+                rc = openshift.selector("rc", "tasks-${dc_version}").object()
+              }
+            }
+          } 
+        }
+      }
+    }
+    stage('Blue/Green Production Deployment') {
+      steps {
+        echo "Blue/Green Deployment"
+        script {
           openshift.withCluster() {
             openshift.withProject("${prodProject}") {
-              openshift.tag("${devProject}/tasks:${devTag}", "${devProject}/tasks:${prodTag}")
-            }
-         }
-      }
+              activeApp = openshift.selector("route", "tasks").object().spec.to.name
+              if (activeApp == "tasks-green") {
+                destApp = "tasks-blue"
+              }
+              echo "Active Application:      " + activeApp
+              echo "Destination Application: " + destApp
 
-      // Blue/Green Deployment into Production
-      // -------------------------------------
-      def destApp   = "tasks-green"
-      def activeApp = ""
+              def dc = openshift.selector("dc/${destApp}").object()
 
-      stage('Blue/Green Production Deployment') {
-          // TBD: Determine which application is active
-          //      Set Image, Set VERSION
-          //      Deploy into the other application
-          //      Make sure the application is running and ready before proceeding
-          echo "Blue/Green Deployment"
-          script {
-            openshift.withCluster() {
-              openshift.withProject("${prodProject}") {
-                activeApp = openshift.selector("route", "tasks").object().spec.to.name
-                if (activeApp == "tasks-green") {
-                  destApp = "tasks-blue"
-                }
-                echo "Active Application:      " + activeApp
-                echo "Destination Application: " + destApp
+              dc.spec.template.spec.containers[0].image="docker-registry.default.svc:5000/${devProject}/tasks:${prodTag}"
 
-                // Update the Image on the Production Deployment Config
-                def dc = openshift.selector("dc/${destApp}").object()
+              openshift.apply(dc)
 
-                // OpenShift 3
-                dc.spec.template.spec.containers[0].image="docker-registry.default.svc:5000/${devProject}/tasks:${prodTag}"
-                sh "oc set env dc/tasks --overwrite VERSION=${destApp} -n b397-tasks-prod"
+              openshift.selector("configmap", "${destApp}-config").delete()
+              def configmap = openshift.create("configmap", "${destApp}-config", "--from-file=./openshift-tasks/configuration/application-users.properties", "--from-file=./openshift-tasks/configuration/application-roles.properties" )
 
-                openshift.apply(dc)
+              openshift.selector("dc", "${destApp}").rollout().latest();
 
-                // Update Config Map in change config files changed in the source
-                openshift.selector("configmap", "${destApp}-config").delete()
-                def configmap = openshift.create("configmap", "${destApp}-config", "--from-file=./configuration/application-users.properties", "--from-file=./configuration/application-roles.properties" )
-
-                // Deploy the inactive application.
-                openshift.selector("dc", "${destApp}").rollout().latest();
-
-                // Wait for application to be deployed
-                def dc_prod = openshift.selector("dc", "${destApp}").object()
-                def dc_version = dc_prod.status.latestVersion
-                def rc_prod = openshift.selector("rc", "${destApp}-${dc_version}").object()
-                echo "Waiting for ${destApp} to be ready"
-                while (rc_prod.spec.replicas != rc_prod.status.readyReplicas) {
-                  sleep 5
-                  rc_prod = openshift.selector("rc", "${destApp}-${dc_version}").object()
-                }
+              def dc_prod = openshift.selector("dc", "${destApp}").object()
+              def dc_version = dc_prod.status.latestVersion
+              def rc_prod = openshift.selector("rc", "${destApp}-${dc_version}").object()
+              echo "Waiting for ${destApp} to be ready"
+              while (rc_prod.spec.replicas != rc_prod.status.readyReplicas) {
+                sleep 5
+                rc_prod = openshift.selector("rc", "${destApp}-${dc_version}").object()
               }
             }
           }
+        }
       }
-
-      stage('Switch over to new Version') {
-          echo "Switching Production application to ${destApp}."
-          // TBD: Execute switch
+    }
+    stage('Switch over to new Version') {
+      steps {
           script {
             openshift.withCluster() {
               openshift.withProject("${prodProject}") {
-                def route = openshift.selector("route/tasks").object()
-                route.spec.to.name="${destApp}"
-                openshift.apply(route)
-              }
+              def route = openshift.selector("route/tasks").object()
+              route.spec.to.name="${destApp}"
+              openshift.apply(route)
             }
           }
+        }
       }
     }
   }
-}
-
-// Convenience Functions to read version from the pom.xml
-// Do not change anything below this line.
-// --------------------------------------------------------
-def getVersionFromPom(pom) {
-  def matcher = readFile(pom) =~ '<version>(.+)</version>'
-  matcher ? matcher[0][1] : null
-}
+}      
