--- a/openshift-tasks/Jenkinsfile
+++ b/openshift-tasks/Jenkinsfile
@@ -1,75 +1,146 @@
-def prefix      = "b397"
-def devProject  = "${prefix}-tasks-dev"
-def prodProject = "${prefix}-tasks-prod"
-def devTag      = "0.0-0"
-def prodTag     = "0.0"
-def destApp     = "tasks-green"
-def activeApp   = ""
-def mvnCmd = "mvn -s openshift-tasks/nexus.xml -f openshift-tasks/pom.xml"
-def version = ""
+#!groovy
+podTemplate(
+  label: "skopeo-pod",
+  cloud: "openshift",
+  inheritFrom: "maven",
+  containers: [
+    containerTemplate(
+      name: "jnlp",
+      image: "docker-registry.default.svc:5000/${GUID}-jenkins/jenkins-agent-appdev",
+      resourceRequestMemory: "1Gi",
+      resourceLimitMemory: "2Gi",
+      resourceRequestCpu: "1",
+      resourceLimitCpu: "2"
+    )
+  ]
+) {
+  node('skopeo-pod') {
+    // Define Maven Command to point to the correct
+    // settings for our Nexus installation
+    def mvnCmd = "mvn -s ../nexus_settings.xml"
 
-pipeline {
-  agent {
-    label 'maven-appdev'
-  }
-stages {
- stage('Checkout Source') {
-      steps {
-        checkout([$class: 'GitSCM', branches: [[name: '**']], doGenerateSubmoduleConfigurations: false, extensions: [], submoduleCfg: [], userRemoteConfigs: [[url: 'https://github.com/micaelis72/advdevtraining.git']]])    
-        script {
-          def pom = readMavenPom file: 'openshift-tasks/pom.xml'
-          version = pom.version
+    // Checkout Source Code.
+    stage('Checkout Source') {
+      checkout scm
+    }
 
-          devTag  = "${version}-" + currentBuild.number
-          prodTag = "${version}"
-        }
-      }    
-    }  
-    stage('Build War File') {
-      steps {
+    // Build the Tasks Service
+    dir('openshift-tasks') {
+      // The following variables need to be defined at the top level
+      // and not inside the scope of a stage - otherwise they would not
+      // be accessible from other stages.
+      // Extract version from the pom.xml
+      def version = getVersionFromPom("pom.xml")
+
+      // TBD Set the tag for the development image: version + build number
+      def devTag  = "${version}-${BUILD_NUMBER}"
+      // Set the tag for the production image: version
+      def prodTag = "${version}"
+
+      def devProject="${GUID}-tasks-dev"
+      def prodProject="${GUID}-tasks-prod"
+
+      // Using Maven build the war file
+      // Do not run tests in this step
+      stage('Build war') {
         echo "Building version ${devTag}"
         sh "${mvnCmd} clean package -DskipTests=true"
-      }   
-    }
-    stage('Unit Tests') {
-      steps {
-        echo "Running Unit Tests"
-        sh "${mvnCmd} test"
-        step([$class: 'JUnitResultArchiver', testResults: '**/target/surefire-reports/TEST-*.xml'])
       }
-    }
-    stage('Code Analysis') {
-      steps {
-        script {
+
+      
+      // Using Maven run the unit tests
+      stage('Run-unit-tests-and-code-analysis') {
+        parallel unit: {
+          echo "Running Unit Tests"
+
+          sh "${mvnCmd} test"
+        }, analysis: {
           echo "Running Code Analysis"
-          sh "${mvnCmd} sonar:sonar -Dsonar.host.url=http://sonarqube-gpte-hw-cicd.apps.na311.openshift.opentlc.com/ -Dsonar.projectName=${devProject} -Dsonar.projectVersion=${devTag}"
+
+          sh "${mvnCmd} sonar:sonar -Dsonar.host.url=http://sonarqube.gpte-hw-cicd.svc.cluster.local:9000 \
+            -Dsonar.projectName=${JOB_BASE_NAME} -Dsonar.projectVersion=${devTag}"
         }
-      }
-    }
-    stage('Publish to Nexus') {
-      steps {
+      }  //end parallel stages
+
+      // Publish the built war file to Nexus
+      stage('Publish to Nexus') {
         echo "Publish to Nexus"
-        sh "${mvnCmd} deploy -DskipTests=true -DaltDeploymentRepository=nexus::default::http://nexus3-gpte-hw-cicd.apps.na311.openshift.opentlc.com/repository/releases"      
+
+        sh "${mvnCmd} deploy -DskipTests=true \
+          -DaltDeploymentRepository=nexus::default::http://nexus3.gpte-hw-cicd.svc.cluster.local:8081/repository/releases"
       }
-    }
-    stage('Build and Tag OpenShift Image') {
-      steps {
+
+      // Build the OpenShift Image in OpenShift and tag it.
+      stage('Build and Tag OpenShift Image') {
         echo "Building OpenShift container image tasks:${devTag}"
+
         script {
           openshift.withCluster() {
             openshift.withProject("${devProject}") {
               openshift.selector("bc", "tasks").startBuild("--from-file=./target/openshift-tasks.war", "--wait=true")
+
               openshift.tag("tasks:latest", "tasks:${devTag}")
             }
           }
         }
       }
-    }
-    stage('Copy Image to Nexus Docker Registry') {
-      steps {
-        echo "Copy image to Nexus Docker Registry"
+
+      // Deploy the built image to the Development Environment.
+      stage('Deploy to Dev') {
+        echo "Deploying container image to Development Project ${devProject}"
+  
         script {
-          sh "skopeo copy --src-tls-verify=false --dest-tls-verify=false --src-creds openshift:\$(oc whoami -t) --dest-creds admin:redhat docker://docker-registry.default.svc.cluster.local:5000/${devProject}/tasks:${devTag} docker://nexus3-registry.gpte-hw-cicd.svc.cluster.local:5000/tasks:${devTag}"
+          sh "oc set env dc/tasks -n ${GUID}-tasks-dev VERSION=\"${devTag} (tasks-dev)\""
+
+          openshift.withCluster() {openshift.withCluster() {
+            openshift.withProject("${devProject}") {
+              openshift.selector("bc", "tasks").startBuild("--from-file=./target/openshift-tasks.war", "--wait=true")
+
+              openshift.tag("tasks:latest", "tasks:${devTag}")
+            }
+          }
+            openshift.withProject("${devProject}") {
+              // OpenShift 4
+              //openshift.set("image", "dc/tasks", "tasks=image-registry.openshift-image-registry.svc:5000/${devProject}/tasks:${devTag}")
+
+              // For OpenShift 3 use this:
+              openshift.set("image", "dc/tasks", "tasks=docker-registry.default.svc:5000/${devProject}/tasks:${devTag}")
+
+              // Update the Config Map which contains the users for the Tasks application
+              // (just in case the properties files changed in the latest commit)
+              openshift.selector('configmap', 'tasks-config').delete()
+              def configmap = openshift.create('configmap', 'tasks-config', '--from-file=./configuration/application-users.properties', '--from-file=./configuration/application-roles.properties' )
+
+              // Deploy the development application.
+              openshift.selector("dc", "tasks").rollout().latest();
+
+              // Wait for application to be deployed
+              def dc = openshift.selector("dc", "tasks").object()
+              def dc_version = dc.status.latestVersion
+              def rc = openshift.selector("rc", "tasks-${dc_version}").object()
+
+              echo "Waiting for ReplicationController tasks-${dc_version} to be ready"
+              while (rc.spec.replicas != rc.status.readyReplicas) {
+                sleep 10
+                rc = openshift.selector("rc", "tasks-${dc_version}").object()
+              }
+            }
+          }
+        }
+      }
+
+      // Copy Image to Nexus container registry
+      stage('Copy Image to Nexus container registry') {
+        echo "Copy image to Nexus container registry"
+
+        script {
+          // OpenShift 3
+          sh "skopeo copy --src-tls-verify=false --dest-tls-verify=false \
+            --src-creds openshift:\$(oc whoami -t) \
+            --dest-creds admin:redhat \
+            docker://docker-registry.default.svc.cluster.local:5000/${devProject}/tasks:${devTag} docker://nexus-registry.gpte-hw-cicd.svc.cluster.local:5000/tasks:${devTag}"
+
+          // Tag the built image with the production tag.
           openshift.withCluster() {
             openshift.withProject("${prodProject}") {
               openshift.tag("${devProject}/tasks:${devTag}", "${devProject}/tasks:${prodTag}")
@@ -77,34 +148,19 @@ stages {
           }
         }
       }
-    }
-    stage('Deploy to Dev') {
-      steps {
-        echo "Deploying container image to Development Project"
+
+      // Blue/Green Deployment into Production
+      // -------------------------------------
+      def destApp   = "tasks-green"
+      def activeApp = ""
+
+      stage('Blue/Green Production Deployment') {
+        echo "Blue/Green Production Deployment to ${prodProject}"
+      
         script {
-          openshift.withCluster() {
-            openshift.withProject("${devProject}") {
-              openshift.set("image", "dc/tasks", "tasks=docker-registry.default.svc:5000/${devProject}/tasks:${devTag}")
-              openshift.selector('configmap', 'tasks-config').delete()
-              def configmap = openshift.create('configmap', 'tasks-config', '--from-file=./openshift-tasks/configuration/application-users.properties', '--from-file=./openshift-tasks/configuration/application-roles.properties' )
-              openshift.selector("dc", "tasks").rollout().latest();
-              def dc = openshift.selector("dc", "tasks").object()
-              def dc_version = dc.status.latestVersion
-              def rc = openshift.selector("rc", "tasks-${dc_version}").object()
-              echo "Waiting for ReplicationController tasks-${dc_version} to be ready"
-              while (rc.spec.replicas != rc.status.readyReplicas) {
-                sleep 5
-                rc = openshift.selector("rc", "tasks-${dc_version}").object()
-              }
-            }
-          } 
-        }
-      }
-    }
-    stage('Blue/Green Production Deployment') {
-      steps {
-        echo "Blue/Green Deployment"
-        script {
+          sh "oc set env dc/tasks-green -n ${GUID}-tasks-prod VERSION=\"${prodTag} (tasks-green)\""
+          sh "oc set env dc/tasks-blue -n ${GUID}-tasks-prod VERSION=\"${prodTag} (tasks-blue)\""
+
           openshift.withCluster() {
             openshift.withProject("${prodProject}") {
               activeApp = openshift.selector("route", "tasks").object().spec.to.name
@@ -114,35 +170,42 @@ stages {
               echo "Active Application:      " + activeApp
               echo "Destination Application: " + destApp
 
+              // Update the Image on the Production Deployment Config
               def dc = openshift.selector("dc/${destApp}").object()
 
+              // OpenShift 4
+              //dc.spec.template.spec.containers[0].image="image-registry.openshift-image-registry.svc:5000/${devProject}/tasks:${prodTag}"
+              // OpenShift 3
               dc.spec.template.spec.containers[0].image="docker-registry.default.svc:5000/${devProject}/tasks:${prodTag}"
 
               openshift.apply(dc)
 
+              // Update Config Map in change config files changed in the source
               openshift.selector("configmap", "${destApp}-config").delete()
-              def configmap = openshift.create("configmap", "${destApp}-config", "--from-file=./openshift-tasks/configuration/application-users.properties", "--from-file=./openshift-tasks/configuration/application-roles.properties" )
+              def configmap = openshift.create("configmap", "${destApp}-config", "--from-file=./configuration/application-users.properties", "--from-file=./configuration/application-roles.properties" )
 
+              // Deploy the inactive application.
               openshift.selector("dc", "${destApp}").rollout().latest();
 
+              // Wait for application to be deployed
               def dc_prod = openshift.selector("dc", "${destApp}").object()
               def dc_version = dc_prod.status.latestVersion
               def rc_prod = openshift.selector("rc", "${destApp}-${dc_version}").object()
               echo "Waiting for ${destApp} to be ready"
               while (rc_prod.spec.replicas != rc_prod.status.readyReplicas) {
-                sleep 5
+                sleep 10
                 rc_prod = openshift.selector("rc", "${destApp}-${dc_version}").object()
               }
             }
           }
         }
       }
-    }
-    stage('Switch over to new Version') {
-      steps {
-          script {
-            openshift.withCluster() {
-              openshift.withProject("${prodProject}") {
+
+      stage('Switch over to new Version') {
+        echo "Switching Production application to ${destApp}."
+        script {
+          openshift.withCluster() {
+            openshift.withProject("${prodProject}") {
               def route = openshift.selector("route/tasks").object()
               route.spec.to.name="${destApp}"
               openshift.apply(route)
@@ -150,6 +213,15 @@ stages {
           }
         }
       }
+
     }
   }
-}      
+}
+
+// Convenience Functions to read version from the pom.xml
+// Do not change anything below this line.
+// --------------------------------------------------------
+def getVersionFromPom(pom) {
+  def matcher = readFile(pom) =~ '<version>(.+)</version>'
+  matcher ? matcher[0][1] : null
+}
